# Owen

./: .gitignore  README.md
.github/workflows/: build.yml
engine/: CMakeLists.txt  Makefile  package-lock.json
engine/src/: bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  nnue_cuda.cu  nnue_cuda.h  search.cpp  search.h  syzygy_tb.cpp  syzygy_tb.h  types.h  uci.cpp  uci.h
engine/src/sfnnue/: misc.cpp  misc.h  nnue.cpp  nnue.h
engine/src/syzygy/: stdendian.h  tbchess.c  tbconfig.h  tbprobe.c  tbprobe.h
tools/: match_gnuchess.py  match_uci.py
training/: config.yaml  config_cuda_strong.yaml  config_smoke.yaml  encoder.py  evaluator.py  mcts.py  model.py  nnue.py  replay_buffer.py  requirements.txt  selfplay.py  train.py
training/tests/: test_encoder.py
weights/: README.md
